22. Some minor changes to UI

--- a/src/App/View/Admin/Pages/add.html
+++ b/src/App/View/Admin/Pages/add.html
@@ -66,8 +66,8 @@
                                             <label for="template">Page template <span class="required">*</span></label>
                                             <select name="template" class="form-control" id="template">
                                                 <option value="default" {% if page.template == "default" %}selected{% endif %}>Default Template</option>
-                                                <option value="contact" {% if page.template == "contact" %}selected{% endif %}>Contact Page</option>
-                                                <option value="sitemap" {% if page.template == "sitemap" %}selected{% endif %}>Sitemap Page</option>
+                                                <option value="contact" {% if page.template == "contact" %}selected{% endif %}>Contact Template</option>
+                                                <option value="sitemap" {% if page.template == "sitemap" %}selected{% endif %}>Sitemap Template</option>
                                             </select>
                                         </div>
                                     </div>
