--- a/src/App/View/Index/index.html
+++ b/src/App/View/Index/index.html
@@ -12,35 +12,35 @@
             <div class="flexslider">
                 <ul class="slides">
                     <li>
-                        <img src="/uploads/slider/slides/living-white-940x350.png" alt="White Living Room">
+                        <img src="/uploads/img-20160914091501-57d8f8f52fb37.jpg" alt="White Living Room">
                         <div class="flex-caption">
                             <h2>Title</h2>
                             <p>Description ...</p>
                         </div>
                     </li>
                     <li>
-                        <img src="/uploads/slider/slides/villa-940x350.png" alt="Villa">
+                        <img src="/uploads/img-20160914091501-57d8f8f52fb37.jpg" alt="Villa">
                         <div class="flex-caption">
                             <h2>Title</h2>
                             <p>Description ...</p>
                         </div>
                     </li>
                     <li>
-                        <img src="/uploads/slider/slides/building-940x350.png" alt="Building">
+                        <img src="/uploads/img-20160914091501-57d8f8f52fb37.jpg" alt="Building">
                         <div class="flex-caption">
                             <h2>Title</h2>
                             <p>Description ...</p>
                         </div>
                     </li>
                     <li>
-                        <img src="/uploads/slider/slides/living-brown-940x350.png" alt="Brown Living Room">
+                        <img src="/uploads/img-20160914091501-57d8f8f52fb37.jpg" alt="Brown Living Room">
                         <div class="flex-caption">
                             <h2>Title</h2>
                             <p>Description ...</p>
                         </div>
                     </li>
                     <li>
-                        <img src="/uploads/slider/slides/dining-brown-940x350.png" alt="Brown Dining Room">
+                        <img src="/uploads/img-20160914091501-57d8f8f52fb37.jpg" alt="Brown Dining Room">
                         <div class="flex-caption">
                             <h2>Title</h2>
                             <p>Description ...</p>
