--- a/src/App/View/Index/sitemap-google.html
+++ b/src/App/View/Index/sitemap-google.html
@@ -1,11 +1,36 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <urlset xmlns="http://www.sitemaps.org/schemas/sitemap/0.9">
-    {% for url in urls %}
-        <url>
-            <loc>{{ url.slug }}</loc>
-            <lastmod>{{ url.last_modified }}</lastmod>
-            <changefreq>weekly</changefreq>
-            <priority>0.8</priority>
-        </url>
-    {% endfor %}
+    {% set items = getSitemapFor("page") %}
+    {% if items is iterable and items|length > 0 %}
+        {% for item in items %}
+            <url>
+                <loc>{{ serverUrl() ~ urlFor("post", {slug: item.slug}) }}</loc>
+                <lastmod>{{ item.updated_at }}</lastmod>
+                <changefreq>weekly</changefreq>
+                <priority>0.8</priority>
+            </url>
+        {% endfor %}
+    {% endif %}
+    {% set items = getSitemapFor("category") %}
+    {% if items is iterable and items|length > 0 %}
+        {% for item in items %}
+            <url>
+                <loc>{{ serverUrl() ~ urlFor("archive", {slug: item.slug, page: 1}) }}</loc>
+                <lastmod>{{ item.updated_at }}</lastmod>
+                <changefreq>weekly</changefreq>
+                <priority>0.8</priority>
+            </url>
+        {% endfor %}
+    {% endif %}
+    {% set items = getSitemapFor("post") %}
+    {% if items is iterable and items|length > 0 %}
+        {% for item in items %}
+            <url>
+                <loc>{{ serverUrl() ~ urlFor("post", {slug: item.slug}) }}</loc>
+                <lastmod>{{ item.updated_at }}</lastmod>
+                <changefreq>weekly</changefreq>
+                <priority>0.8</priority>
+            </url>
+        {% endfor %}
+    {% endif %}
 </urlset>
