--- a/src/App/View/front.html
+++ b/src/App/View/front.html
@@ -35,6 +35,17 @@
             <link type="text/css" rel="stylesheet" href="/assets/vendor/menu/menu.css">
             <!-- End CSS -->
         {% endblock %}
+        <!-- Begin Cookie Consent -->
+        <script type="text/javascript">
+            window.cookieconsent_options = {
+                "message": "{{ getSetting("cp") }}",
+                "dismiss": "I understand",
+                "link": "{{ getSetting("cpl") }}",
+                "theme": "dark-top"
+            };
+        </script>
+        <script type="text/javascript" src="//cdnjs.cloudflare.com/ajax/libs/cookieconsent2/1.0.10/cookieconsent.min.js"></script>
+        <!-- End Cookie Consent -->
         <!-- Site CSS -->
         <link type="text/css" rel="stylesheet" href="/assets/css/style.css">
     </head>
