--- a/src/App/View/Admin/Categories/edit.html
+++ b/src/App/View/Admin/Categories/edit.html
@@ -18,6 +18,7 @@
                                 <div class="form-group">
                                     <label for="title">Title <span class="required">*</span></label>
                                     <input type="text" name="title" class="form-control" id="title" value="{{ category.title }}">
+                                    <p class="help-block">Url: {{ serverUrl() ~ urlFor("archive", {slug: category.slug, page: 1}) }}</p>
                                 </div>
                             </div>
                         </div>
