--- a/src/App/View/Admin/Pages/edit.html
+++ b/src/App/View/Admin/Pages/edit.html
@@ -26,6 +26,7 @@
                                         <div class="form-group">
                                             <label for="title">Title <span class="required">*</span></label>
                                             <input type="text" name="title" class="form-control" id="title" value="{{ page.title }}">
+                                            <p class="help-block">Url: {{ serverUrl() ~ urlFor("post", {slug: page.slug}) }}</p>
                                         </div>
                                     </div>
                                 </div>
@@ -73,8 +74,8 @@
                                             <label for="template">Page template <span class="required">*</span></label>
                                             <select name="template" class="form-control" id="template">
                                                 <option value="default" {% if page.template == "default" %}selected{% endif %}>Default Template</option>
-                                                <option value="contact" {% if page.template == "contact" %}selected{% endif %}>Contact Page</option>
-                                                <option value="sitemap" {% if page.template == "sitemap" %}selected{% endif %}>Sitemap Page</option>
+                                                <option value="contact" {% if page.template == "contact" %}selected{% endif %}>Contact Template</option>
+                                                <option value="sitemap" {% if page.template == "sitemap" %}selected{% endif %}>Sitemap Template</option>
                                             </select>
                                         </div>
                                     </div>
