--- a/src/App/View/Admin/Posts/add.html
+++ b/src/App/View/Admin/Posts/add.html
@@ -95,6 +95,23 @@
                                         </div>
                                     </div>
                                 </div>
+                                <div class="row">
+                                    <div class="col-xs-12">
+                                        <div class="form-group">
+                                            <label for="publish_on">Publish on</label>
+                                            <div class="checkbox">
+                                                <label>
+                                                    <input name="fb" type="checkbox" value="1"> Facebook
+                                                </label>
+                                            </div>
+                                            <div class="checkbox">
+                                                <label>
+                                                    <input name="in" type="checkbox" value="1"> Linkedin
+                                                </label>
+                                            </div>
+                                        </div>
+                                    </div>
+                                </div>
                             </div>
                         </div>
                     </div>
