--- a/src/App/View/Error/500.html
+++ b/src/App/View/Error/500.html
@@ -1,6 +1,7 @@
-{% extends 'back.html' %}
-
+{% extends "front.html" %}
 {% block content %}
-
-  error
+    <div id="page-header">
+        <h1 id="page-title">Something went wrong</h1>
+    </div>
+    <p>This error has been reported</p>
 {% endblock %}
