--- a/src/App/View/Admin/Settings/index.html
+++ b/src/App/View/Admin/Settings/index.html
@@ -39,8 +39,8 @@
                             <label for="fb_app_token_key" class="col-sm-2 control-label">Facebook App Token</label>
                             <div class="col-sm-10">
                                 <input type="text" name="fb_app_token" class="form-control" id="fb_app_token_key" value="{{ getSetting("fb_app_token") }}" disabled>
-                                <p class="help-block">Token expires on: {{ getSetting("fb_app_token_expires") | date("F jS Y \\a\\t g:ia") }}</p>
-                                <a class="btn btn-default {% if isExpiredAuthToken(getSetting("fb_app_token_expires")) %}disabled{% endif %}" href="{{ auth_fb_url }}">Authorize App</a>
+                                <p class="help-block">Current Token expires on: {{ getSetting("fb_app_token_expires") | date("F jS Y \\a\\t g:ia") }}</p>
+                                <a class="btn btn-default" href="{{ auth_fb_url }}">Authorize App</a>
                             </div>
                         </div>
                         <div class="form-group">
@@ -71,8 +71,8 @@
                             <label for="in_app_token_key" class="col-sm-2 control-label">Linkedin App Token</label>
                             <div class="col-sm-10">
                                 <input type="text" name="in_app_token" class="form-control" id="in_app_token_key" value="{{ getSetting("in_app_token") }}" disabled>
-                                <p class="help-block">Token expires on: {{ getSetting("in_app_token_expires") | date("F jS Y \\a\\t g:ia") }}</p>
-                                <a class="btn btn-default {% if isExpiredAuthToken(getSetting("in_app_token_expires")) %}disabled{% endif %}" href="{{ auth_in_url }}">Authorize App</a>
+                                <p class="help-block">Current Token expires on: {{ getSetting("in_app_token_expires") | date("F jS Y \\a\\t g:ia") }}</p>
+                                <a class="btn btn-default" href="{{ auth_in_url }}">Authorize App</a>
                             </div>
                         </div>
                         <div class="form-group">
