--- a/public/assets/css/style.css
+++ b/public/assets/css/style.css
@@ -21,9 +21,7 @@ a, a > *, .button, .jcarousel-prev, .jcarousel-next {-webkit-transition: color 0
 h1 {font-weight: 300; font-size: 2.333em; line-height: 1.214em;}
 h2 {font-weight: bold; font-size: 1.5em; line-height: 1.333em;}
 h3 {font-weight: 600; font-size: 1.333em; line-height: 1.375em;}
-h1, h2, h3, h4, h5, h6 {
-    margin-bottom: 15px;
-}
+h1, h2, h3, h4, h5, h6 {margin-bottom: 15px;}
 
 /* ---------------------------------------------------------------------- */
 /* Containers
@@ -96,7 +94,7 @@ input[type="submit"] {width: auto;}
 /* ---------------------------------------------------------------------- */
 /* Content
 /* ---------------------------------------------------------------------- */
-#content {padding-top: 15px;}
+#content {padding-top: 10px;}
 p {margin-bottom: 20px;}
 .float-left {float: left;}
 .float-right {float: right;}
