--- a/public/assets/css/style.css
+++ b/public/assets/css/style.css
@@ -136,6 +136,8 @@ ul#search-results p {margin: 0;}
 .post-date > span {margin-bottom: 5px; font-style: italic;}
 .post-body {overflow: hidden;}
 h2.post-title {margin-bottom: 15px;}
+h2 span.more {font-weight: normal; font-size: 0.666em; line-height: 1.5em;}
+h2 span.more a {font-style: italic;}
 .post-title a {color: #383838;}
 .post-title a:hover {color: #CA5728;}
 .post-list > .post > .post-single-image {display: block;}
